Changes anti-duplication stratgey from controlling focus to using aria.

Previously with screenreaders we were seeing duplication of information,
due to a container being selectable/aria-readable. The initial solution
was to make this container unselectable, but this caused the menu to be
unusable.

This new solution instead makes the containter aria-hidden, and sets
the information previously obtained from its children on the parent
label.

Bug: 919446
Change-Id: I6b5a057b24ccc43c9f7deebe7805ee8f2a6a3821
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1401454
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Commit-Queue: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#638403}
Former-commit-id: 6cf760c73c30f3873b9af2acd95fb02ef7664536